Add the moving functionality to the easy labyrinth in play.js and adjusted the code in play.html and style.css for better practice.

--- a/play.html
+++ b/play.html
@@ -259,32 +259,32 @@
             <button data-exit-game="#easy-game" aria-label="Back to the play page." class="exit-button">Exit</button>
           </div>
           <div class="grid-easy">
-             <div id="one"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div> 
-            <div id="two"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="three"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="four"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="five"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="six"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="seven"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="eight"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="nine"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="ten"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="eleven"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="twelve"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="thirteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="fourteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="fifteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="sixteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="seventeen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="eighteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="nineteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="twenty"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="twenty-one"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="twenty-two"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="twenty-three"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
-            <div id="twenty-four"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+             <div id="easy-one" data-easy-available-direction="right-two down-five"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div> 
+            <div id="easy-two" data-easy-available-direction="left-one right-three"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-three" data-easy-available-direction="left-two right-four"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-four" data-easy-available-direction="left-three down-eight"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-five" data-easy-available-direction="up-one down-nine"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-six" data-easy-available-direction="right-seven down-ten"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-seven" data-easy-available-direction="left-six right-eight"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-eight" data-easy-available-direction="up-four left-seven"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-nine" data-easy-available-direction="up-five down-thirteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-ten" data-easy-available-direction="up-six down-fourteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-eleven" data-easy-available-direction="right-twelve down-fifteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-twelve" data-easy-available-direction="left-eleven down-sixteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-thirteen" data-easy-available-direction="up-nine down-seventeen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-fourteen" data-easy-available-direction="up-ten right-fifteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-fifteen" data-easy-available-direction="up-eleven left-fourteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-sixteen" data-easy-available-direction="up-twelve down-twenty"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-seventeen" data-easy-available-direction="up-thirteen down-twenty-one"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-eighteen" data-easy-available-direction="right-nineteen down-twenty-two"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-nineteen" data-easy-available-direction="left-eighteen right-twenty"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-twenty" data-easy-available-direction="up-sixteen left-nineteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-twenty-one" data-easy-available-direction="up-seventeen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-twenty-two" data-easy-available-direction="up-eighteen right-twenty-three"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-twenty-three" data-easy-available-direction="left-twenty-two right-twenty-four"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="easy-twenty-four" data-easy-available-direction="left-twenty-three"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
             
-            <div id="player" class="avatar twenty-four"></div>
+            <div id="player" class="avatar one"></div>
           </div>
             <div class="controls"> 
                 <button data-button-direction="up" id="arrow-up" class="control-buttons button-up"><i class="far fa-arrow-alt-circle-up"></i></button>
