Remove the modal active class as default so the game does not show by default .

--- a/play.html
+++ b/play.html
@@ -251,7 +251,7 @@
         <button aria-label="Start the game." id="start-button">Start</button>
 
         <!--------------------- Game -->
-        <div id="easy-game" class="game-modal modal-active">
+        <div id="easy-game" class="game-modal">
           <div class="game-display">
             <button data-new-game class="new-game-button">New game</button>
             <div data-game-subject class="game-subject"></div>
