Remove the overlay active class as default so the overlay does not show by default .

--- a/play.html
+++ b/play.html
@@ -293,7 +293,7 @@
                 <button data-button-direction="down" id="arrow-down" class="control-buttons button-down"><i class="far fa-arrow-alt-circle-down"></i></button> 
             </div>
         </div>
-        <div class="game-overlay overlay-active"></div>
+        <div class="game-overlay"></div>
       </section>
     </section>
 
