Change the initial position of the avatar in play.html

--- a/play.html
+++ b/play.html
@@ -284,7 +284,7 @@
             <div id="easy-twenty-three" data-easy-available-direction="left-twenty-two right-twenty-four"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
             <div id="easy-twenty-four" data-easy-available-direction="left-twenty-three"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
             
-            <div id="player" class="avatar one"></div>
+            <div id="player" class="avatar twenty-four"></div>
           </div>
             <div class="controls"> 
                 <button data-button-direction="up" id="arrow-up" class="control-buttons button-up"><i class="far fa-arrow-alt-circle-up"></i></button>
