Add media queries for website responsiveness on all screen sizes.

--- a/index.html
+++ b/index.html
@@ -51,150 +51,152 @@
   </head>
 
   <body>
-    <header>
-      <!-- Navigation bar -->
-      <nav>
-        <!-- Logo -->
-        <a href="index.html" class="logo" aria-label="Link to the home page.">
-          <img
-            src="assets/images/logo/logo.png"
-            alt="Know It logo representing a smiling friendly brain with eyes."
-            title="Link to the home page."
-            height="40"
-            width="40"
-          />
-        </a>
+    <div class="home-wrapper">
+      <header>
+        <!-- Navigation bar -->
+        <nav>
+          <!-- Logo -->
+          <a href="index.html" class="logo" aria-label="Link to the home page.">
+            <img
+              src="assets/images/logo/logo.png"
+              alt="Know It logo representing a smiling friendly brain with eyes."
+              title="Link to the home page."
+              height="40"
+              width="40"
+            />
+          </a>
 
-        <!--Dropdown navigation menu for all devices -->
-        <button
-          id="navigation-button"
-          class="menu-icon"
-          aria-label="Navigation menu."
-        >
-          <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
-          <img
-            src="assets/images/icons/menu.png"
-            alt="Icon of a book."
-            title="Navigation menu."
-            height="40"
-            width="40"
-          />
-          <span class="menu-text">Menu</span>
-        </button>
+          <!--Dropdown navigation menu for all devices -->
+          <button
+            id="navigation-button"
+            class="menu-icon"
+            aria-label="Navigation menu."
+          >
+            <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
+            <img
+              src="assets/images/icons/menu.png"
+              alt="Icon of a book."
+              title="Navigation menu."
+              height="40"
+              width="40"
+            />
+            <span class="menu-text">Menu</span>
+          </button>
 
-        <div class="navigation-menu">
-          <ul class="navigation-list">
-            <li class="navigation-items">
-              <a
-                href="index.html"
-                class="navigation-links"
-                aria-label="Link to the home page."
-              >
-                Home
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="about.html"
-                class="navigation-links"
-                aria-label="Link to the about page."
-              >
-                About
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="study.html"
-                class="navigation-links"
-                aria-label="Link to the study page."
-              >
-                Study
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="play.html"
-                class="navigation-links"
-                aria-label="Link to the play page."
-              >
-                Play
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="contact.html"
-                class="navigation-links"
-                aria-label="Link to the contact page."
-              >
-                Contact
-              </a>
-            </li>
-          </ul>
+          <div class="navigation-menu">
+            <ul class="navigation-list">
+              <li class="navigation-items">
+                <a
+                  href="index.html"
+                  class="navigation-links"
+                  aria-label="Link to the home page."
+                >
+                  Home
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="about.html"
+                  class="navigation-links"
+                  aria-label="Link to the about page."
+                >
+                  About
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="study.html"
+                  class="navigation-links"
+                  aria-label="Link to the study page."
+                >
+                  Study
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="play.html"
+                  class="navigation-links"
+                  aria-label="Link to the play page."
+                >
+                  Play
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="contact.html"
+                  class="navigation-links"
+                  aria-label="Link to the contact page."
+                >
+                  Contact
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
+      <!-- Heading -->
+      <div class="heading">
+        <h1 class="home-heading">Welcome to Know It</h1>
+        <span>"Learning is cool and Knowledge is great!"</span>
+      </div>
+
+      <!-- main section -->
+      <section class="home-section">
+        <div class="statement">
+          <h3>Here learning is FUN !</h3>
         </div>
-      </nav>
-    </header>
+        <a href="about.html" class="buttons about-button">About</a>
+        <a href="study.html" class="buttons study-button">Study</a>
+        <a href="play.html" class="buttons play-button">Play</a>
+      </section>
 
-    <!-- Heading -->
-    <div class="heading">
-      <h1 class="home-heading">Welcome to Know It</h1>
-      <span>"Learning is cool and Knowledge is great!"</span>
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="copyright">
+          <i class="far fa-copyright" aria-hidden="true"></i>
+          For educational purposes.
+        </div>
+        <div class="footer-links">
+          <a
+            href="#"
+            rel="noopener"
+            target="_blank"
+            aria-label="Link to websiteName."
+          >
+            <i
+              class="fab fa-pinterest-p"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
+          <a
+            href="#"
+            rel="noopener"
+            target="_blank"
+            aria-label="Link to websiteName."
+          >
+            <i
+              class="fas fa-graduation-cap"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
+          <a
+            href="#"
+            rel="noopener"
+            target="_blank"
+            aria-label="Link to websiteName."
+          >
+            <i
+              class="fas fa-cogs"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
+        </div>
+      </footer>
     </div>
-
-    <!-- main section -->
-    <section class="home-section">
-      <div class="statement">
-        <h3>Here learning is FUN !</h3>
-      </div>
-      <a href="about.html" class="buttons about-button">About</a>
-      <a href="study.html" class="buttons study-button">Study</a>
-      <a href="play.html" class="buttons play-button">Play</a>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="copyright">
-        <i class="far fa-copyright" aria-hidden="true"></i>
-        For educational purposes.
-      </div>
-      <div class="footer-links">
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fab fa-pinterest-p"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fas fa-graduation-cap"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fas fa-cogs"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-      </div>
-    </footer>
   </body>
   <script src="assets/js/main.js"></script>
 </html>
