--- a/404.html
+++ b/404.html
@@ -51,168 +51,170 @@
   </head>
 
   <body>
-    <header>
-      <!-- Navigation bar -->
-      <nav>
-        <!-- Logo -->
-        <a href="index.html" class="logo" aria-label="Link to the home page.">
-          <img
-            src="assets/images/logo/logo.png"
-            alt="Know It logo representing a smiling friendly brain with eyes."
-            title="Link to the home page."
-            height="40"
-            width="40"
-          />
-        </a>
+    <div class="error-wrapper">
+      <header>
+        <!-- Navigation bar -->
+        <nav>
+          <!-- Logo -->
+          <a href="index.html" class="logo" aria-label="Link to the home page.">
+            <img
+              src="assets/images/logo/logo.png"
+              alt="Know It logo representing a smiling friendly brain with eyes."
+              title="Link to the home page."
+              height="40"
+              width="40"
+            />
+          </a>
 
-        <!--Dropdown navigation menu for all devices -->
-        <button
-          id="navigation-button"
-          class="menu-icon"
-          aria-label="Navigation menu."
-        >
-          <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
-          <img
-            src="assets/images/icons/menu.png"
-            alt="Icon of a book."
-            title="Navigation menu."
-            height="40"
-            width="40"
-          />
-          <span class="menu-text">Menu</span>
-        </button>
+          <!--Dropdown navigation menu for all devices -->
+          <button
+            id="navigation-button"
+            class="menu-icon"
+            aria-label="Navigation menu."
+          >
+            <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
+            <img
+              src="assets/images/icons/menu.png"
+              alt="Icon of a book."
+              title="Navigation menu."
+              height="40"
+              width="40"
+            />
+            <span class="menu-text">Menu</span>
+          </button>
 
-        <div class="navigation-menu">
-          <ul class="navigation-list">
-            <li class="navigation-items">
-              <a
-                href="index.html"
-                class="navigation-links"
-                aria-label="Link to the home page."
-              >
-                Home
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="about.html"
-                class="navigation-links"
-                aria-label="Link to the about page."
-              >
-                About
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="study.html"
-                class="navigation-links"
-                aria-label="Link to the study page."
-              >
-                Study
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="play.html"
-                class="navigation-links"
-                aria-label="Link to the play page."
-              >
-                Play
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="contact.html"
-                class="navigation-links"
-                aria-label="Link to the contact page."
-              >
-                Contact
-              </a>
-            </li>
-          </ul>
+          <div class="navigation-menu">
+            <ul class="navigation-list">
+              <li class="navigation-items">
+                <a
+                  href="index.html"
+                  class="navigation-links"
+                  aria-label="Link to the home page."
+                >
+                  Home
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="about.html"
+                  class="navigation-links"
+                  aria-label="Link to the about page."
+                >
+                  About
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="study.html"
+                  class="navigation-links"
+                  aria-label="Link to the study page."
+                >
+                  Study
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="play.html"
+                  class="navigation-links"
+                  aria-label="Link to the play page."
+                >
+                  Play
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="contact.html"
+                  class="navigation-links"
+                  aria-label="Link to the contact page."
+                >
+                  Contact
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
+      <!-- Heading -->
+      <div class="heading">
+        <h2>Oops!</h2>
+        <span>This is a 404 error page.</span>
+      </div>
+
+      <!-- 404 section -->
+      <section class="error-section">
+        <p>We can't seem to be able to find the page you are looking for.</p>
+        <a href="index.html" class="back-home-button">Back to home page</a>
+
+        <ul>
+          <span>Here are some useful links:</span>
+          <li>
+            <a
+              href="https://en.wikipedia.org/wiki/HTTP_404"
+              class="error-links"
+              target="_blank"
+              rel="noopener"
+              aria-label="Link to Wikipedia."
+              >What is a 404 error?</a
+            >
+          </li>
+          <li>
+            <a
+              href="contact.html"
+              class="error-links"
+              aria-label="Link to the contact page."
+              >Report an issue.</a
+            >
+          </li>
+        </ul>
+      </section>
+
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="copyright">
+          <i class="far fa-copyright" aria-hidden="true"></i>
+          For educational purposes.
         </div>
-      </nav>
-    </header>
-
-    <!-- Heading -->
-    <div class="heading">
-      <h2>Oops!</h2>
-      <span>This is a 404 error page.</span>
-    </div>
-
-    <!-- 404 section -->
-    <section class="error-section">
-      <p>We can seem to be able to find the page you are looking for.</p>
-      <a href="index.html" class="back-home-button">Back to home page</a>
-
-      <ul>
-        <span>Here are some useful links:</span>
-        <li>
+        <div class="footer-links">
           <a
-            href="https://en.wikipedia.org/wiki/HTTP_404"
-            class="error-links"
-            target="_blank"
+            href="#"
             rel="noopener"
-            aria-label="Link to Wikipedia."
-            >What is a 404 error?</a
+            target="_blank"
+            aria-label="Link to websiteName."
           >
-        </li>
-        <li>
+            <i
+              class="fab fa-pinterest-p"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
           <a
-            href="contact.html"
-            class="error-links"
-            aria-label="Link to the contact page."
-            >Report an issue.</a
+            href="#"
+            rel="noopener"
+            target="_blank"
+            aria-label="Link to websiteName."
           >
-        </li>
-      </ul>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="copyright">
-        <i class="far fa-copyright" aria-hidden="true"></i>
-        For educational purposes.
-      </div>
-      <div class="footer-links">
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fab fa-pinterest-p"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fas fa-graduation-cap"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fas fa-cogs"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-      </div>
-    </footer>
+            <i
+              class="fas fa-graduation-cap"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
+          <a
+            href="#"
+            rel="noopener"
+            target="_blank"
+            aria-label="Link to websiteName."
+          >
+            <i
+              class="fas fa-cogs"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
+        </div>
+      </footer>
+    </div>
   </body>
   <script src="assets/js/main.js"></script>
 </html>
