--- a/contact.html
+++ b/contact.html
@@ -61,212 +61,214 @@
   </head>
 
   <body>
-    <header>
-      <!-- Navigation bar -->
-      <nav>
-        <!-- Logo -->
-        <a href="index.html" class="logo" aria-label="Link to the home page.">
-          <img
-            src="assets/images/logo/logo.png"
-            alt="Know It logo representing a smiling friendly brain with eyes."
-            title="Link to the home page."
-            height="40"
-            width="40"
-          />
-        </a>
+    <div class="contact-wrapper">
+      <header>
+        <!-- Navigation bar -->
+        <nav>
+          <!-- Logo -->
+          <a href="index.html" class="logo" aria-label="Link to the home page.">
+            <img
+              src="assets/images/logo/logo.png"
+              alt="Know It logo representing a smiling friendly brain with eyes."
+              title="Link to the home page."
+              height="40"
+              width="40"
+            />
+          </a>
 
-        <!--Dropdown navigation menu for all devices -->
-        <button
-          id="navigation-button"
-          class="menu-icon"
-          aria-label="Navigation menu."
-        >
-          <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
-          <img
-            src="assets/images/icons/menu.png"
-            alt="Icon of a book."
-            title="Navigation menu."
-            height="40"
-            width="40"
-          />
-          <span class="menu-text">Menu</span>
-        </button>
+          <!--Dropdown navigation menu for all devices -->
+          <button
+            id="navigation-button"
+            class="menu-icon"
+            aria-label="Navigation menu."
+          >
+            <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
+            <img
+              src="assets/images/icons/menu.png"
+              alt="Icon of a book."
+              title="Navigation menu."
+              height="40"
+              width="40"
+            />
+            <span class="menu-text">Menu</span>
+          </button>
 
-        <div class="navigation-menu">
-          <ul class="navigation-list">
-            <li class="navigation-items">
-              <a
-                href="index.html"
-                class="navigation-links"
-                aria-label="Link to the home page."
-              >
-                Home
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="about.html"
-                class="navigation-links"
-                aria-label="Link to the about page."
-              >
-                About
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="study.html"
-                class="navigation-links"
-                aria-label="Link to the study page."
-              >
-                Study
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="play.html"
-                class="navigation-links"
-                aria-label="Link to the play page."
-              >
-                Play
-              </a>
-            </li>
-            <li class="navigation-items">
-              <a
-                href="contact.html"
-                class="navigation-links"
-                aria-label="Link to the contact page."
-              >
-                Contact
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+          <div class="navigation-menu">
+            <ul class="navigation-list">
+              <li class="navigation-items">
+                <a
+                  href="index.html"
+                  class="navigation-links"
+                  aria-label="Link to the home page."
+                >
+                  Home
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="about.html"
+                  class="navigation-links"
+                  aria-label="Link to the about page."
+                >
+                  About
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="study.html"
+                  class="navigation-links"
+                  aria-label="Link to the study page."
+                >
+                  Study
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="play.html"
+                  class="navigation-links"
+                  aria-label="Link to the play page."
+                >
+                  Play
+                </a>
+              </li>
+              <li class="navigation-items">
+                <a
+                  href="contact.html"
+                  class="navigation-links"
+                  aria-label="Link to the contact page."
+                >
+                  Contact
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
 
-    <!-- Heading -->
-    <div class="heading">
-      <h2>Contact</h2>
-    </div>
-
-    <!-- Form section -->
-    <section class="form-section">
-      <p>
-        To get in touch, please fill up the form, we will get back to you as
-        soon as possible.
-      </p>
-
-      <form id="contact-form" method="POST">
-        <label for="name">Your name:</label>
-        <input
-          id="name"
-          type="text"
-          name="name"
-          placeholder="Full name"
-          required
-        />
-        <label for="email">Your email address:</label>
-        <input id="email" type="email" name="email" required />
-        <label for="reasons">Reason:</label>
-        <select id="reasons" type="text" name="reasons" required>
-          <option value="select">Please select a reason</option>
-          <option value="request">Special request</option>
-          <option value="issue">Report an issue</option>
-          <option value="other">Other</option>
-        </select>
-        <label for="message">Your message:</label>
-        <textarea
-          id="message"
-          name="message"
-          cols="15"
-          rows="5"
-          required
-        ></textarea>
-        <button id="send-button" type="submit">Send</button>
-      </form>
-    </section>
-
-    <!-- Modal to pop-up when email is send -->
-    <div id="email-sent" class="contact-modals">
-      <div class="modal-header">
-        <div>
-          Your message was sent.
-        </div>
-        <button data-close-modal class="close-modal">&times;</button>
+      <!-- Heading -->
+      <div class="heading">
+        <h2>Contact</h2>
       </div>
-      <div class="modal-body">
+
+      <!-- Form section -->
+      <section class="form-section">
         <p>
-          Thank you for your request.<br />
-          Back to :<br />
-          <a href="index.html" class="back-home-button small-home-button">Home page</a>
-          <a href="study.html" class="buttons small-buttons study-button">Study</a>
-          <a href="play.html" class="buttons small-buttons play-button">Play</a>
+          To get in touch, please fill up the form, we will get back to you as
+          soon as possible.
         </p>
-      </div>
-    </div>
 
-    <!-- Modal to pop-up when email has failed to send -->
-    <div id="email-error" class="contact-modals modal">
-      <div class="modal-header">
-        <div>
-          Something went wrong.
+        <form id="contact-form" method="POST">
+          <label for="name">Your name:</label>
+          <input
+            id="name"
+            type="text"
+            name="name"
+            placeholder="Full name"
+            required
+          />
+          <label for="email">Your email address:</label>
+          <input id="email" type="email" name="email" required />
+          <label for="reasons">Reason:</label>
+          <select id="reasons" type="text" name="reasons" required>
+            <option value="select">Please select a reason</option>
+            <option value="request">Special request</option>
+            <option value="issue">Report an issue</option>
+            <option value="other">Other</option>
+          </select>
+          <label for="message">Your message:</label>
+          <textarea
+            id="message"
+            name="message"
+            cols="15"
+            rows="5"
+            required
+          ></textarea>
+          <button id="send-button" type="submit">Send</button>
+        </form>
+      </section>
+
+      <!-- Modal to pop-up when email is send -->
+      <div id="email-sent" class="contact-modals">
+        <div class="modal-header">
+          <div>
+            Your message was sent.
+          </div>
+          <button data-close-modal class="close-modal">&times;</button>
         </div>
-        <button data-close-modal class="close-modal">&times;</button>
+        <div class="modal-body">
+          <p>
+            Thank you for your request.<br />
+            Back to :<br />
+            <a href="index.html" class="back-home-button small-home-button">Home page</a>
+            <a href="study.html" class="buttons small-buttons study-button">Study</a>
+            <a href="play.html" class="buttons small-buttons play-button">Play</a>
+          </p>
+        </div>
       </div>
-      <div class="modal-body">
-        <p>
-          Please check that your entered valid information and try again.
-        </p>
+
+      <!-- Modal to pop-up when email has failed to send -->
+      <div id="email-error" class="contact-modals modal">
+        <div class="modal-header">
+          <div>
+            Something went wrong.
+          </div>
+          <button data-close-modal class="close-modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <p>
+            Please check that your entered valid information and try again.
+          </p>
+        </div>
       </div>
+      <div class="overlay"></div>
+
+
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="copyright">
+          <i class="far fa-copyright" aria-hidden="true"></i>
+          For educational purposes.
+        </div>
+        <div class="footer-links">
+          <a
+            href="#"
+            rel="noopener"
+            target="_blank"
+            aria-label="Link to websiteName."
+          >
+            <i
+              class="fab fa-pinterest-p"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
+          <a
+            href="#"
+            rel="noopener"
+            target="_blank"
+            aria-label="Link to websiteName."
+          >
+            <i
+              class="fas fa-graduation-cap"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
+          <a
+            href="#"
+            rel="noopener"
+            target="_blank"
+            aria-label="Link to websiteName."
+          >
+            <i
+              class="fas fa-cogs"
+              aria-hidden="true"
+              title="Link to websiteName."
+            ></i>
+          </a>
+        </div>
+      </footer>
     </div>
-    <div class="overlay"></div>
-
-
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="copyright">
-        <i class="far fa-copyright" aria-hidden="true"></i>
-        For educational purposes.
-      </div>
-      <div class="footer-links">
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fab fa-pinterest-p"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fas fa-graduation-cap"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-        <a
-          href="#"
-          rel="noopener"
-          target="_blank"
-          aria-label="Link to websiteName."
-        >
-          <i
-            class="fas fa-cogs"
-            aria-hidden="true"
-            title="Link to websiteName."
-          ></i>
-        </a>
-      </div>
-    </footer>
   </body>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/send-email.js"></script>
