Add a line explaining that earth is the compilation of all the other subjects in study.html for clearer information and better user experience.

--- a/study.html
+++ b/study.html
@@ -142,6 +142,7 @@
           <p>
             To choose a subject, click on it!
             <br />
+            <span>Earth corresponds to the compilation of all the subjects!</span><br>
             <span>
               If you want to discover in depth some sections, look for the
               magnifier:
