Add the question logic.

--- a/play.html
+++ b/play.html
@@ -278,7 +278,7 @@
         ocean: [blue water wave texture background by Naoki Kim](https://stock.adobe.com/ie/images/blue-water-wave-texture-background/154153098?prev_url=detail),
         earth: [Top view of a young green forest in spring or summer by artjazz](https://stock.adobe.com/ie/images/top-view-of-a-young-green-forest-in-spring-or-summer/207714693?prev_url=detail)
         -->
-        <div id="easy-game" class="game-modal modal-active">
+        <div id="easy-game" class="game-modal">
           <div class="game-display">
             <button data-new-game class="new-game-button">New game</button>
             <div data-game-subject class="game-subject"></div>
@@ -1117,7 +1117,7 @@
               <i class="fas fa-question-circle"></i>
             </div>
 
-            <div class="question-modal modal-active">
+            <div class="question-modal">
               <form id="question-form" action="#" method="post">
                 <p id="question-display"></p>
                 <div class="answer-display">
@@ -1132,10 +1132,10 @@
                   <input type="radio" id="answer-three" />
                   <label for="answer-three"></label>
                 </div>
-                <button id="submit-answer" type="submit">Let's check?</button>
+                <button id="submit-answer" type="submit">Let's check!</button>
               </form>
             </div>
-            <div class="question-overlay overlay-active"></div>
+            <div class="question-overlay"></div>
           </div>
 
           <div class="controls">
@@ -1169,7 +1169,7 @@
             </button>
           </div>
         </div>
-        <div class="game-overlay overlay-active"></div>
+        <div class="game-overlay"></div>
       </section>
 
       <!-- Footer -->
