Add the function that check the answer submitted by the player and the logic to increment scrore and close the question modal to resume the game progression.

--- a/play.html
+++ b/play.html
@@ -1118,18 +1118,18 @@
             </div>
 
             <div class="question-modal">
-              <form id="question-form" action="#" method="post">
+              <form id="question-form" action="#">
                 <p id="question-display"></p>
                 <div class="answer-display">
-                  <input type="radio" id="answer-one" />
+                  <input type="radio" id="answer-one" name="answers" />
                   <label for="answer-one"></label>
                 </div>
                 <div class="answer-display">
-                  <input type="radio" id="answer-two" />
+                  <input type="radio" id="answer-two" name="answers" />
                   <label for="answer-two"></label>
                 </div>
                 <div class="answer-display">
-                  <input type="radio" id="answer-three" />
+                  <input type="radio" id="answer-three" name="answers" />
                   <label for="answer-three"></label>
                 </div>
                 <button id="submit-answer" type="submit">Let's check!</button>
