Add the Score logic of the game with localStorage and display strikes as visual help for the user. Add the gameOver function that terminate the game when applicable and update the starting game parameters so strikes dont show when starting a new game.

--- a/play.html
+++ b/play.html
@@ -1167,6 +1167,10 @@
             >
               <i class="far fa-arrow-alt-circle-down"></i>
             </button>
+            <div class="strikes-area">
+              <div class="strike-one"><i class="fas fa-book-dead hide"></i></div>
+              <div class="strike-two"><i class="fas fa-book-dead hide"></i></div>
+            </div>
           </div>
         </div>
         <div class="game-overlay"></div>
