Fix the rendering of the achievements in the play.html page and in the results of the game.

--- a/play.html
+++ b/play.html
@@ -271,7 +271,22 @@
           <button aria-label="Start the game." id="start-button">Start</button>
         </section>
         <section class="game-rewards">
-          <div id="rewards-display"></div>
+          <div id="rewards-display">
+            <span>
+              <i id="perm-flag" class="fas fa-flag-checkered hide"></i>
+              <i id="perm-infinity" class="fas fa-infinity hide"></i>
+              <i id="perm-graduation" class="fas fa-graduation-cap hide"></i>
+              <i id="perm-university" class="fas fa-university hide"></i>
+              <i id="perm-atom" class="fas fa-atom hide"></i>
+              <i id="perm-flask" class="fas fa-flask hide"></i>
+              <i id="perm-brain" class="fas fa-brain hide"></i>
+              <i id="perm-robot" class="fas fa-robot hide"></i>
+              <i id="perm-trophy" class="fas fa-trophy hide"></i>
+              <i id="perm-hat" class="fas fa-hat-wizard hide"></i>
+              <i id="perm-gamepad" class="fas fa-gamepad hide"></i>
+              <i id="perm-astronaut" class="fas fa-user-astronaut hide"></i>
+            </span>
+          </div>
         </section>
         <!--------------------- Game -->
         <!-- Credit for the images used as background for the different subject on the game interface.
@@ -1149,7 +1164,23 @@
               </div>
               <div class="modal-body">
                 <p>Your Score: <span id="score"></span></p>
-                <div id="achievements"></div>
+                <div id="achievements">
+                  <span>Rewards:</span>
+                  <span id="rewards">
+                    <i id="flag" class="fas fa-flag-checkered hide"></i>
+                    <i id="infinity" class="fas fa-infinity hide"></i>
+                    <i id="graduation" class="fas fa-graduation-cap hide"></i>
+                    <i id="university" class="fas fa-university hide"></i>
+                    <i id="atom" class="fas fa-atom hide"></i>
+                    <i id="flask" class="fas fa-flask hide"></i>
+                    <i id="brain" class="fas fa-brain hide"></i>
+                    <i id="robot" class="fas fa-robot hide"></i>
+                    <i id="trophy" class="fas fa-trophy hide"></i>
+                    <i id="hat" class="fas fa-hat-wizard hide"></i>
+                    <i id="gamepad" class="fas fa-gamepad hide"></i>
+                    <i id="astronaut" class="fas fa-user-astronaut hide"></i>
+                  </span>
+                </div>
               </div>
             </div>
             <div class="results-overlay"></div>
