Add some style to the result modal for better user expereience in style.css and play.html and add a feature to this modal that display a sentence if no reward has been won in play.js

--- a/play.html
+++ b/play.html
@@ -1163,9 +1163,12 @@
                 <button data-close-modal class="close-modal">&times;</button>
               </div>
               <div class="modal-body">
-                <p>Your Score: <span id="score"></span></p>
+                <p class="uppercase">Your Score: <span id="score"></span></p>
                 <div id="achievements">
-                  <span>Rewards:</span>
+                  <span class="uppercase">Reward:</span>
+                  <p id="no-reward" class="hide">
+                    No reward this time! Try again without getting strikes to win a reward ;)
+                  </p>
                   <span id="rewards">
                     <i id="flag" class="fas fa-flag-checkered hide"></i>
                     <i id="infinity" class="fas fa-infinity hide"></i>
