Change the alert message for game over and the rest of the answers (right and wrong) to a modal for better user experience. Adapt the the way modals are triggered and closed so they dont overlap each other.

--- a/play.html
+++ b/play.html
@@ -1742,7 +1742,13 @@
             <span></span>
           </div>
         </div>
-        <div class="answers-overlay"></div>
+        <div id="game-over" class="answers-result">
+          <div class="modal-body">
+            Sorry you have reached the strike(s) limit.... GAME OVER! Try again &#x1F643;
+          </div>
+        </div>
+
+        <div class="messages-overlay"></div>
 
         <div class="results-modal">
           <div class="modal-header">
