Fixe the rendering of the results modal so all the content fit in the modal amd is not truncated.

--- a/play.html
+++ b/play.html
@@ -1756,7 +1756,7 @@
             <button data-close-modal class="close-modal">&times;</button>
           </div>
           <div class="modal-body">
-            <p class="uppercase">Your Score: <span id="score"></span></p>
+            <p id="score-wrapper" class="uppercase">Your Score: <span id="score"></span></p>
             <div id="achievements">
               <span class="uppercase">Reward:</span>
               <p id="no-reward" class="hide">
