Add a line to explain where the content will be displayed because it is not obvious on small screen for better user experience.

--- a/study.html
+++ b/study.html
@@ -85,9 +85,8 @@
     <!-- Subtitle section -->
     <div class="study-explanations">
       <p>
-        To choose a subject, click on it!
+        To choose a subject, click on it and it will be displayed below !<br />
         <br />
-        <span>Earth corresponds to the compilation of all the other subjects!</span><br>
         <span>
           If you want to discover in depth some sections, look for the
           magnifier:
@@ -95,6 +94,10 @@
             <i class="fas fa-search-plus"></i>
           </button>
         </span>
+        <br />
+        <br />
+        <span><em>Earth corresponds to the compilation of all the other subjects!</em></span>
+
       </p>
     </div>
 
@@ -1032,7 +1035,7 @@
       Ready to test your knowledge?<br>
       Then let's play: <a href="play.html" class="buttons small-buttons play-button">Play</a>
     </p>
-    
+
   </section>
 
   <!-- Footer -->
